--- a/arch/arm/configs/dorimanx_vs980_defconfig
+++ b/arch/arm/configs/dorimanx_vs980_defconfig
@@ -827,6 +827,7 @@ CONFIG_ARCH_BINFMT_ELF_RANDOMIZE_PIE=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 # CONFIG_HAVE_AOUT is not set
 # CONFIG_BINFMT_MISC is not set
+CONFIG_COREDUMP=y
 
 #
 # Power management options
